# gitlucky

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md  fly.toml  input.css  out.txt  package-lock.json
assets/: minecraft.webm  tailwind.css
src/: ai.rs  main.rs
src/components/: echo.rs  hero.rs  mod.rs  navbar.rs
src/github_bot/: GITHUB_API_KEY.pem  bot.rs
src/server/: server.rs
src/views/: home.rs  mod.rs
