[package]
name = "gitlucky"
version = "0.1.0"
authors = ["Evan Almloff <evanalmloff@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/ealmloff/dioxus", branch = "fix-key-validation", features = [
    "router",
] }
openssl = { version = "0.10", features = ["vendored"], optional = true }
axum = { version = "0.7", optional = true }
tokio = { version = "1.44.1", features = ["full"], optional = true }
octocrab = { version = "0.44.0", optional = true }
serde = "1.0.219"
reqwest = { version = "0.12.15", default-features = false, features = [
    "rustls-tls",
    "json"
] }
kalosm = { git = "https://github.com/floneum/floneum", features = [
    "remote",
    "language",
], optional = true }
elevenlabs-api = { version = "0.1.1", optional = true }
rand = { version = "0.9.0" }
serde_json = "1.0.140"
tracing = "0.1.41"
euclid = "0.22.11"
getrandom = { version = "0.3.2", features = ["wasm_js"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
gloo-net = "0.6.0"
web-sys = { version = "0.3.77", features = ["RequestMode"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"
ndk = { version = "0.9.0" }
ndk-sys = { version = "0.6.0" }
ndk-context = { version = "0.1.1" }

[patch.crates-io]
wry = { git = 'https://github.com/ealmloff/wry', branch = 'longer-timeout' }

[features]
default = ["server"]
mobile = ["dioxus/mobile", "dep:tokio"]
server = ["dep:axum", "dep:octocrab", "dep:kalosm", "dep:elevenlabs-api", "dep:openssl", "dep:tokio"]
desktop = ["dioxus/desktop", "dep:tokio"]
web = ["dioxus/web"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
