[package]
name = "gitlucky"
version = "0.1.0"
authors = ["Evan Almloff <evanalmloff@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/ealmloff/dioxus", branch = "fix-key-validation", features = [
    "router",
] }
openssl = { version = "0.10" }
axum = { version = "0.7", optional = true }
tokio = { version = "1.44.1", features = ["full"] }
octocrab = { version = "0.44.0", optional = true }
serde = "1.0.219"
reqwest = { version = "0.12.15", default-features = false, features = [
    "rustls-tls",
    "json",
] }
kalosm = { git = "https://github.com/floneum/floneum", features = [
    "remote",
    "language",
], optional = true }
elevenlabs-api = { version = "0.1.1", optional = true }
rand = "0.9.0"
serde_json = "1.0.140"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"
ndk = { version = "0.9.0" }
ndk-sys = { version = "0.6.0" }
ndk-context = { version = "0.1.1" }

[features]
default = ["server"]
mobile = ["dioxus/mobile"]
server = ["dep:axum", "dep:octocrab", "dep:kalosm", "dep:elevenlabs-api"]
desktop = ["dioxus/desktop"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
